--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-md-12">
                <div class="titlepage text_align_center">
                   <h2>مستوى المحتوى</h2>
-                  <p>اختر يطاقة مستوى المحتو الذي يناسبك</p>
+                  <p>اختر يطاقة مستوى المحتوى الذي يناسبك</p>
                </div>
             </div>
          </div>
